--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Welcome!</title>
+    <title>Da blog!</title>
   </head>
   <body class="">
     <nav class="m-0 navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
@@ -20,15 +20,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto text-uppercase font-italic">
-          <li class="nav-item align-self-center"><a href="index.html" class="nav-link active">home</a></li>
+          <li class="nav-item align-self-center"><a href="index.html" class="nav-link">home</a></li>
           <li class="nav-item align-self-center"><a href="about.html" class="nav-link">about</a></li>
-          <li class="nav-item align-self-center"><a href="blog.html" class="nav-link">blog</a></li>
+          <li class="nav-item align-self-center"><a href="#" class="nav-link  active">blog</a></li>
         </ul>
       </div>
     </nav>
-
     <header class="jumbotron mt-5">
-        <h1 class="display-4">Welcome</h1>
+      <h1 class="display-4 ">Da Blog</h1>
     </header>
     <main class="container mb-4">
       <section class="">
