Ammend a mistake in footer navigation

--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
 
     <footer class="border-radius-none">
         <div class="jumbotron m-0">
+          <nav>
           <ul class=" nav d-flex justify-content-center  border-bottom">
             <li class="nav-item m-0"><a href="#" class="nav-link active">WebGroup</a></li>
             <li class="nav-item m-0"><a href="#" class="nav-link">Contact</a></li>
             <li class="nav-item m-0"><a href="#" class="nav-link">Copyleft 2025</a></li>
           </ul>
+        </nav>
         </div >
-      </nav>
     </footer>
 
     <!-- Optional JavaScript -->
